--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+input {
+  display: flex;
+  background: white;
+  border: 2px solid grey;
+  border-radius: 3.5px 3.5px;
+  box-shadow: 1.5px 1px rgb(185, 181, 181), -0.2em 0 0.4em rgb(92, 88, 88);
+  font-size: 1rem;
+  height: 30px;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input:focus {
+  box-shadow: 1.5px 1px grey, -0.2em 0 0.4em black;
+  outline-color: blue;
 }
