--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-input {
+/*input {
   display: flex;
   background: white;
   border: 2px solid grey;
@@ -12,4 +12,4 @@ input {
 input:focus {
   box-shadow: 1.5px 1px grey, -0.2em 0 0.4em black;
   outline-color: blue;
-}
+}*/
