--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,131 @@
-/*input {
-  display: flex;
-  background: white;
-  border: 2px solid grey;
-  border-radius: 3.5px 3.5px;
-  box-shadow: 1.5px 1px rgb(185, 181, 181), -0.2em 0 0.4em rgb(92, 88, 88);
-  font-size: 1rem;
-  height: 30px;
+* {
+  font-family: 'Rubik', sans-serif;
+  margin: 0px;
+}
+
+html, body {
+  height: 100vh;
+  width: 100vw;
+}
+
+
+.navbar {
+  background: linear-gradient(to right, #093009, #0D3E10, #1F6032, #29773E, #369457, #032202);
+  color: white;
   width: 100%;
+  position: fixed;
+  padding-left: 25px;;
+  z-index: 1;
+  box-shadow: 1px 2px 10px grey;
+
+}
+
+h3.card-title {
+  margin: 6px;
+  align-self: center;
+  box-sizing: border-box;
+}
+
+a.navbar-brand {
+  color: white;
+  text-decoration: none;
+  font-size: 2rem;
+  font-family: 'Special Elite', cursive;
+}
+
+a.nav-item {
+  color: white;
+  font-family: 'Rubik', sans-serif;
+}
+
+main {
+  width: 100vw;
+}
+
+.container {
+  padding-top: 110px;
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+.container-section {
+  border-bottom: 1px dotted #1F6032;
+  margin: 0 auto;
+  padding: 30px;
+  height: auto;
+  width: 80vw;
+}
+
+img {
+  box-sizing: content-box;
+  background-color: #0D3E10;
+  opacity: 90%;
+  box-shadow: 1px 2px 10px grey;
+  filter:saturate(70%);
+  filter: brightness(100%);
+  justify-content: center;
+
+}
+
+input {
+  border-color: 0.2px #032202;
+  width: 30vw;
+  align-self: center;
 }
 
 input:focus {
-  box-shadow: 1.5px 1px grey, -0.2em 0 0.4em black;
-  outline-color: blue;
-}*/
+  box-shadow: 1.5px 1px #caf0f8, -0.2em 0 0.4em #caf0f8;
+  outline-color: #369457;
+}
+
+.btn {
+  background-color: #0D3E10;
+  color: white;
+  margin-bottom: 20px;
+  padding: 0.6rem;
+}
+.btn:hover {
+  color: white;
+  box-shadow: 1px 2px 10px grey;
+}
+
+.mt-1 {
+  margin-top: 5px;
+}
+
+.mt-5 {
+  margin-top: 20px;
+}
+
+.mb-1 {
+  margin-bottom: 5px;
+}
+
+.mb-5 {
+  margin-bottom: 20px;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.card-global {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+
+}
+
+.card-img-top {
+  justify-content: center;
+}
+
+.col {
+  align-items: center;
+
+}
+
+.row {
+  justify-content: center;
+}
+
