--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,19 @@ html, body {
 
 }
 
+.nav-btn {
+  
+  border: none;
+  border-radius: 0.2rem;;
+  background-color: #0D3E10;
+  color: white;
+}
+
+.nav-btn:hover {
+  color: white;
+  box-shadow: 1px 2px 10px #11ceaec0;
+}
+
 h6.card-title {
   margin: 6px;
   padding: 5px;
@@ -39,13 +52,19 @@ a.nav-item {
   text-decoration: none;
   font-family: 'Rubik', sans-serif;
   transition: color .15s ease-in-out;
-  display: block;
+  display: flex;
+  flex-direction: flex-end;
   padding: 0.5rem 1rem;
 }
 
+.container-btn-submit {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+}
 
 a.nav-item:hover {
-  color: #a0f83b;
+  color: #11ceaec0;
   text-decoration: none;
 }
 
@@ -58,6 +77,18 @@ a::selection {
   text-decoration: none;
 }
 
+
+ul.navbar-nav {
+  margin-right: 10px;;
+}
+
+.text-info {
+
+  margin-left: 50px;
+  margin-right: 20px;
+}
+
+
 main {
   width: 100vw;
 }
@@ -69,6 +100,7 @@ main {
 }
 
 .container-section {
+  position: absolute;
   border-bottom: 1px dotted #1F6032;
   margin: 0 auto;
   padding: 30px;
