--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,13 @@
 html, body {
   height: 100vh;
   width: 100vw;
+
+
 }
 
-
 .navbar {
-  background: linear-gradient(to right, #093009, #0D3E10, #1F6032, #29773E, #369457, #032202);
-  color: white;
+  /*background: linear-gradient(to right, #093009, #0D3E10, #1F6032, #29773E, #369457, #032202);*/
+  background-color: white;
   width: 100%;
   position: fixed;
   padding-left: 25px;;
@@ -24,13 +25,15 @@ html, body {
   
   border: none;
   border-radius: 0.2rem;;
-  background-color: #0D3E10;
-  color: white;
+  background-color: white;
+  /*background-color: #0D3E10;*/
+  color: black;
+  border: solid rgb(207, 200, 200) 1px;
 }
 
 .nav-btn:hover {
-  color: white;
-  box-shadow: 1px 2px 10px #11ceaec0;
+  color: black;
+  box-shadow: 1px 2px 10px #093009;
 }
 
 h6.card-title {
@@ -41,14 +44,14 @@ h6.card-title {
 }
 
 a.navbar-brand {
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 2rem;
   font-family: 'Special Elite', cursive;
 }
 
 a.nav-item {
-  color: white;
+  color: black;
   text-decoration: none;
   font-family: 'Rubik', sans-serif;
   transition: color .15s ease-in-out;
@@ -115,15 +118,6 @@ main {
   width: 80vw;
 }
 
-img {
-  box-sizing: content-box;
-  background-color: #0D3E10;
-  opacity: 90%;
-  box-shadow: 1px 2px 10px grey;
-  filter:saturate(70%);
-  filter: brightness(100%);
-
-}
 
 input {
   border-color: 0.2px #032202;
@@ -132,19 +126,19 @@ input {
 }
 
 input:focus {
-  box-shadow: 1.5px 1px #caf0f8, -0.2em 0 0.4em #caf0f8;
+  box-shadow: 1.5px 1px #caf0f8, -0.2em 0 0.4em #093009;
   outline-color: #369457;
 }
 
 .btn {
-  background-color: #0D3E10;
-  color: white;
+  color: black;
+  border: solid rgb(207, 200, 200) 1px;
   margin-bottom: 20px;
   padding: 0.6rem;
 }
 .btn:hover {
-  color: white;
-  box-shadow: 1px 2px 10px grey;
+  color: black;
+  box-shadow: 1px 2px 10px #032202;
 }
 
 .mt-1 {
@@ -176,6 +170,26 @@ input:focus {
 
 .card-img-top {
   justify-content: center;
+  box-sizing: content-box;
+  opacity: 90%;
+  padding: 2px;
+  box-shadow: 1px 2px 10px grey;
+  filter:saturate(70%);
+}
+
+.card-img-top:hover {
+  padding: 4px;
+  transition: color .50s ease-in-out;
+}
+
+img {
+border: none;
+
+}
+
+
+.card-body {
+  width: 50px;
 }
 
 .col {
@@ -189,4 +203,24 @@ input:focus {
 
 .card {
   align-items: center;
+  width: 200px;
+  height: 200px;
+  margin: 100px;
+}
+
+
+.prueba-seccion {
+  text-align: center;
+  padding: 10px;
+  background-color: rgba(233, 211, 12, 0.877);
+  
+}
+
+.container-btn-submit {
+  justify-content: space-evenly;
+}
+
+.container-homepage-sub {
+  display: flex;
+  justify-content: space-evenly;
 }
