--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,23 @@ html, body {
 
 }
 
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #2e09ffea;
+}
+
+a:hover {
+  color: #11ceaec0;
+}
+
+.text-details {
+  text-decoration: underline 3px rgba(233, 211, 12, 0.877);
+}
+
 .navbar {
   /*background: linear-gradient(to right, #093009, #0D3E10, #1F6032, #29773E, #369457, #032202);*/
   background-color: white;
@@ -26,7 +43,6 @@ html, body {
   border: none;
   border-radius: 0.2rem;;
   background-color: white;
-  /*background-color: #0D3E10;*/
   color: black;
   border: solid rgb(207, 200, 200) 1px;
 }
@@ -66,6 +82,16 @@ a.nav-item {
   margin-top: 20px;
 }
 
+.container-img {
+  margin-top: 0;
+  display: flex;
+}
+
+.container-quotes {
+  margin-top: 20px;
+}
+
+
 a.nav-item:hover {
   color: #11ceaec0;
   text-decoration: none;
@@ -104,14 +130,14 @@ main {
 }
 
 .container {
-  padding-top: 110px;
-  padding-left: 70px;
+  margin: 0 auto;
+  width: 100vw;
+  padding-top: 80px;
   padding-right: 70px;
 }
 
 .container-section {
   position: relative;
-  border-bottom: 1px dotted #1F6032;
   margin: 0 auto;
   padding: 30px;
   height: auto;
@@ -132,6 +158,7 @@ input:focus {
 
 .btn {
   color: black;
+  background-color: white;
   border: solid rgb(207, 200, 200) 1px;
   margin-bottom: 20px;
   padding: 0.6rem;
@@ -222,5 +249,36 @@ border: none;
 
 .container-homepage-sub {
   display: flex;
-  justify-content: space-evenly;
+  padding-left: 100px;
+  justify-content: center;
+}
+
+.card-detail {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.card-img {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.card-title-item {
+  width: 50%;
+  margin: 0 auto;
+  background-color: rgba(233, 211, 12, 0.877);
+}
+
+footer {
+  background-color: white;
+  width: 100%;
+  margin-top: 20px;
+  padding-left: 25px;;
+  box-shadow: 1px 2px 10px grey;
+}
+
+.footer-author {
+  font-style: italic;
+  color: white;
+  margin-left: 20px;
 }
